tests/baselines/reference/wrappedAndRecursiveConstraints3.errors.txt
tests/cases/conformance/types/typeParameters/typeArgumentLists/wrappedAndRecursiveConstraints3.ts(13,12): error TS2345: Argument of type '""' is not assignable to parameter of type '{ length: 3; charAt: (x: number) => void; }'.


==== tests/cases/conformance/types/typeParameters/typeArgumentLists/wrappedAndRecursiveConstraints3.ts (1 errors) ====
    class C<T extends { length: number }> {
        constructor(x: T) { }
        foo<U extends T>(x: U) {
            function bar<V extends U>(x: V) {
                return x;
            }
            return bar;
        }
    }
    
    var c = new C(<{ length: number }> { length: 2 });
    var r = c.foo({ length: 3, charAt: (x: number) => { '' } });
    var r2 = r('');
               ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type '{ length: 3; charAt: (x: number) => void; }'.